--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gymplan-project",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "curl -s -o /dev/null -w '%{http_code}' http://localhost:3000/api/health | grep 200 && echo 'Health check passed' || (echo 'Health check failed' && exit 1)"
   },
   "keywords": [],
   "author": "",
